CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(SSEngine)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_DEFINITIONS(-DLUA_COMPAT_ALL)

IF (MSVC)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
ENDIF (MSVC)

SET(ENV{SS_INCLUDE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(SS_HAVE_OUTPUT_DIRECTORY ON)

SET(ENV{SS_BINARY_PATH} ${SSEngine_BINARY_DIR}/bin)
SET(ENV{SS_ARCHIVE_PATH} ${SSEngine_BINARY_DIR}/lib)
SET(ENV{SS_PDB_PATH} ${SSEngine_BINARY_DIR}/bin/pdb)

ADD_SUBDIRECTORY(include)

ADD_SUBDIRECTORY(modules/core)


IF (WIN32)
	ADD_SUBDIRECTORY(launchers/win32-basic)
ENDIF(WIN32)