CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(SSEngine)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

ADD_DEFINITIONS(-DLUA_COMPAT_ALL -DLUA_BUILD_AS_DLL)

IF (MSVC)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS -D_SCL_SECURE_NO_WARNINGS)
ENDIF (MSVC)

SET(ENV{SS_INCLUDE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(SS_HAVE_OUTPUT_DIRECTORY ON)

OPTION(SS_LUAVERSION_LUAJIT "" ON)

IF (SS_LUAVERSION_LUAJIT)
	SET(SS_LUA_VERSION LUAJIT)
	SET(SS_LUA_LIBNAME lua51)
ELSE()
	ERROR("No lua version")
ENDIF()

SET(ENV{SS_BINARY_PATH} ${SSEngine_BINARY_DIR}/bin)
SET(ENV{SS_ARCHIVE_PATH} ${SSEngine_BINARY_DIR}/lib)
SET(ENV{SS_PDB_PATH} ${SSEngine_BINARY_DIR}/bin/pdb)

SET(LUA_INCLUDE $ENV{${SS_LUA_VERSION}_INCLUDE})
SET(LUA_LIB $ENV{${SS_LUA_VERSION}_LIB})
SET(LUA_BIN $ENV{${SS_LUA_VERSION}_BIN})

INCLUDE_DIRECTORIES($ENV{SS_INCLUDE_PATH} ${LUA_INCLUDE})

ADD_SUBDIRECTORY(include)

ADD_SUBDIRECTORY(modules/core)

IF (WIN32)
	ADD_SUBDIRECTORY(launchers/win32-basic)
ENDIF(WIN32)